@@ -7,8 +7,6 @@
  * Licence: ``GPL-3``
  * Versions:
 
-  * `0.6.1 <https://github.com/JNRowe/jnrowe-misc/blob/master/mail-client/notmuch/notmuch-0.6.1.ebuild>`__  ``amd64``, ``x86``
-  * `0.6.1-r1 <https://github.com/JNRowe/jnrowe-misc/blob/master/mail-client/notmuch/notmuch-0.6.1-r1.ebuild>`__  ``~amd64`` (due 2011-10-10), ``~x86`` (due 2011-10-10)
-  * `0.7 <https://github.com/JNRowe/jnrowe-misc/blob/master/mail-client/notmuch/notmuch-0.7.ebuild>`__  ``amd64``, ``~x86`` (due 2011-09-17)
+  * `0.7 <https://github.com/JNRowe/jnrowe-misc/blob/master/mail-client/notmuch/notmuch-0.7.ebuild>`__  ``amd64``, ``x86``
   * `0.7-r1 <https://github.com/JNRowe/jnrowe-misc/blob/master/mail-client/notmuch/notmuch-0.7-r1.ebuild>`__  ``~amd64`` (due 2011-10-10), ``~x86`` (due 2011-10-10)
 
