@@ -1,19 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST notmuch-0.6.1.tar.gz 388182 RMD160 c1c46e03c34f63629071269413bc74bf9b669506 SHA1 ea18d618499d0dd03fdb0defaddaf263e1e5c312 SHA256 e2d02a24e5b3200ee2e16c0dd27dff1913d9ec76e0ee352d1e7e92eb6e4d5ef5
 DIST notmuch-0.7.tar.gz 389830 RMD160 ae55134588c7435074ce6d73dcb151bee2447845 SHA1 a16bf6dfbce78a62b004ce9f983c1b3a4951c733 SHA256 0548310551b5e0da2eb366e1683e4b81b25b774d5ab4c5117091a67653646ec8
-EBUILD notmuch-0.6.1-r1.ebuild 4665 RMD160 5ac2bb05bb130453690752472103aa19d4ec1f95 SHA1 b8e329e6ec0af697d7fb655f0f211b12169e61d6 SHA256 197f92d4f426d312234021c6f50b171cc785567e9ff6c3003d3386e30e2af5c9
-EBUILD notmuch-0.6.1.ebuild 4775 RMD160 555f4d80bdd7900df6b3d69e02f304594ff43055 SHA1 da45cc7531c4de4fd817bafe626a869fc965253e SHA256 b08fced9d7dadfca2971ade522a18c4b95b71967f60aba70d46573a9bef52eac
 EBUILD notmuch-0.7-r1.ebuild 4665 RMD160 5ac2bb05bb130453690752472103aa19d4ec1f95 SHA1 b8e329e6ec0af697d7fb655f0f211b12169e61d6 SHA256 197f92d4f426d312234021c6f50b171cc785567e9ff6c3003d3386e30e2af5c9
-EBUILD notmuch-0.7.ebuild 4776 RMD160 257d4ab2b5ec4d1b8f8f47941bb9e7ee00be7bba SHA1 bc8e25b3cb858bcb45343245a87d0d39d35c8d52 SHA256 114ab8a3574012b4b3cb1186bc130cc8041549ff0ccee4ccf5647f52214a3eb5
-MISC ChangeLog 6866 RMD160 af764adf35869255847e97cbcafc28457452747a SHA1 e1b0b92263fa0dc1941c55b0bf146e096a2205f8 SHA256 db95e726e3336db36f46e45c1dfc77d93bbdccc4fd216446a175e8130acfcb10
+EBUILD notmuch-0.7.ebuild 4775 RMD160 555f4d80bdd7900df6b3d69e02f304594ff43055 SHA1 da45cc7531c4de4fd817bafe626a869fc965253e SHA256 b08fced9d7dadfca2971ade522a18c4b95b71967f60aba70d46573a9bef52eac
+MISC ChangeLog 7000 RMD160 bbe7cd224d1bc1f27b3ea1e60cc5f84eaff7f267 SHA1 041e73b7609118d178f4cca9ad8698a13b492174 SHA256 6a79c3966adad69c8bc21891c1e0df04a25d658017fa20764edd644fb8c8e1d2
 MISC metadata.xml 897 RMD160 436f9558ab188a98a79dee2b25afba0ce4660f97 SHA1 f31467190638f4b59034c19c855c798b919143f4 SHA256 9408059d62680198c500a7e4727352f9195602f4550fbd25e1962b3b953c74d7
 MISC watch 50 RMD160 df9c217f719a593b336c5befd696b069f6324b5c SHA1 841d4f323cd4229ed287b8ae7078cb6b410226a0 SHA256 9179b7c39d6a0632841b32d25e21f2bd9eb7d2596b4dad08fba6415b7a9b9540
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk50qdMACgkQzJrj3cAXR0mXhgCgrcuqmBW7/2A6eKRWF0mr1oRa
-5wsAoLiZ8nVBbi8bfZYCiGMOSGneBHAk
-=gFeR
+iEYEAREKAAYFAk51xhUACgkQzJrj3cAXR0mhVgCgqLgGYaaNsZlYqSDrfz8eX0iz
+AXsAnjWiNdodG+6747CN3PdSihaK5Ukl
+=qhAY
 -----END PGP SIGNATURE-----
