@@ -1,22 +1,0 @@
-dev-util/pkgconfig debug? ( dev-util/valgrind ) sys-libs/talloc >=dev-libs/gmime-2.4 dev-libs/xapian emacs? ( =virtual/emacs-23 ) python? ( || ( >=dev-lang/python-2.6 dev-python/simplejson ) ) ruby? ( dev-lang/ruby:1.8 ) vim? ( || ( app-editors/vim app-editors/gvim ) ) >=app-admin/eselect-python-20091230 python? ( || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* ) )
-sys-libs/talloc >=dev-libs/gmime-2.4 dev-libs/xapian emacs? ( =virtual/emacs-23 ) python? ( || ( >=dev-lang/python-2.6 dev-python/simplejson ) ) ruby? ( dev-lang/ruby:1.8 ) vim? ( || ( app-editors/vim app-editors/gvim ) ) >=app-admin/eselect-python-20091230 python? ( || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* ) )
-0
-http://notmuchmail.org/releases/notmuch-0.6.1.tar.gz
-
-http://notmuchmail.org/
-GPL-3
-Thread-based email index, search and tagging.
-~amd64 ~x86
-base bash-completion-r1 distutils elisp-common eutils multilib portability python ruby-ng toolchain-funcs
-X debug emacs python ruby vim ruby_targets_ruby18
-
-
-
-3
-
-compile configure install postinst postrm prepare setup test unpack
-
-
-
-
-
