@@ -1,4 +1,3 @@
-* mail-client/notmuch-0.7                     x86 SCHEDULED: <2011-09-17 Sat>
 * media-gfx/nwdiag-0.4.0                      x86 SCHEDULED: <2011-09-17 Sat>
 * dev-vcs/pepper-0.2.4                        x86 SCHEDULED: <2011-09-17 Sat>
 * dev-python/pgmagick-0.4.1                   x86 SCHEDULED: <2011-09-17 Sat>
@@ -45,8 +44,6 @@
 * app-misc/hubugs-0.11.0                      x86 SCHEDULED: <2011-10-06 Thu>
 * dev-vcs/gitflow-0.4.1-r1                  amd64 SCHEDULED: <2011-10-10 Mon>
 * dev-vcs/gitflow-0.4.1-r1                    x86 SCHEDULED: <2011-10-10 Mon>
-* mail-client/notmuch-0.6.1-r1              amd64 SCHEDULED: <2011-10-10 Mon>
-* mail-client/notmuch-0.6.1-r1                x86 SCHEDULED: <2011-10-10 Mon>
 * mail-client/notmuch-0.7-r1                amd64 SCHEDULED: <2011-10-10 Mon>
 * mail-client/notmuch-0.7-r1                  x86 SCHEDULED: <2011-10-10 Mon>
 * app-misc/hammertime-0.1.3                 amd64 SCHEDULED: <2011-10-13 Thu>
