@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Sep 2011; James Rowe <jnrowe@gmail.com> -notmuch-0.6.1.ebuild,
+  -notmuch-0.6.1-r1.ebuild, notmuch-0.7.ebuild:
+  Keyworded x86.
+
   17 Sep 2011; James Rowe <jnrowe@gmail.com> notmuch-0.7.ebuild:
   Keyworded amd64.
 
